--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,8 @@
 ---
 - hosts: all
     # Create Kubernetes resources to run flask app.
-  - name: Create a Deployment for flask app
+  tasks:    
+  - name: name: Create a Deployment for flask app
     k8s:
       state: present
       definition:
