--- a/playbook.yaml
+++ b/playbook.yaml
@@ -5,6 +5,11 @@
      KUBECONFIG:"~/.kube/config"
     # Create Kubernetes resources to run flask app.
   tasks:    
+  - name: Deploy my app secrets.
+      k8s:
+        definition: '{{ item }}'
+        kubeconfig: '~/.kube/config'
+        state: present
   - name: Create a Deployment for flask app
     k8s:
       state: present
