--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,5 +2,5 @@
 - hosts: localhost
   become-user: sysadmin
   tasks: 
-  - name: run kubernetes.yaml to deploy flask app and create a service
-    shell: kubectl apply -f kubernetes.yaml
+    - name: run kubernetes.yaml to deploy flask app and create a service
+      command: kubectl apply -f kubernetes.yaml
