--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,6 +1,6 @@
 ---
 - hosts: localhost
-  become-user: sysadmin
+  user: sysadmin
   tasks: 
     - name: run kubernetes.yaml to deploy flask app and create a service
       command: kubectl apply -f kubernetes.yaml
