--- a/playbook.yaml
+++ b/playbook.yaml
@@ -2,5 +2,8 @@
 - hosts: localhost
   user: sysadmin
   tasks: 
+    - name: kubectl get secrets
+      shell: kubectl get secrets
+      register: kube_secrets
     - name: run kubernetes.yaml to deploy flask app and create a service
       command: kubectl apply -f kubernetes.yaml
