--- a/playbook.yaml
+++ b/playbook.yaml
@@ -3,7 +3,7 @@
   user: sysadmin
   tasks: 
     - name: kubectl get secrets
-      shell: kubectl get secrets
+      shell: kubectl get secrets secret-demo 
       register: kube_secrets
     - name: run kubernetes.yaml to deploy flask app and create a service
       command: kubectl apply -f kubernetes.yaml
