--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,6 +1,16 @@
----
 - hosts: localhost
   user: sysadmin
-  tasks: 
-    - name: run kubernetes.yaml to deploy flask app and create a service
-      command: kubectl apply -f kubernetes.yaml
+  tasks:
+    - name: Create a k8s namespace
+      community.kubernetes.k8s:
+        name: flask
+        api_version: v1
+        kind: Namespace
+        state: present
+
+# Passing the object definition from a file
+
+    - name: Create a Deployment and service by reading the definition from a local file
+      community.kubernetes.k8s:
+        state: present
+        src: ./kubernetes.yaml
